--- a/themes/cafe/layout/_partial/article.ejs
+++ b/themes/cafe/layout/_partial/article.ejs
@@ -28,6 +28,8 @@
         <% } %>
         <%- post.content %>
         <div>
+          <hr>
+          <p style="margin-bottom: 0;">如果你覺得這篇文章很棒，請你不吝點讚 (ﾟ∀ﾟ)</p>
           <iframe width="100%" height="230px" scrolling="no" frameborder="0" id="player" src="https://button.like.co/in/embed/allem40306/button/?referrer=<%- post.permalink %>" allowfullscreen="true"></iframe>
         </div>
       <% } %>
